<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_height="fill_parent" 
     android:layout_width="fill_parent"
     android:scrollbars="horizontal|vertical"
     >
 <HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
     android:layout_height="wrap_content" 
     android:layout_width="fill_parent"
     >    
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/table"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:scrollbars="horizontal|vertical"
    android:visibility="gone"
    tools:context=".MainActivity" 
    >

    <TableRow>
       	<TextView
        android:text="@string/wage_summary"
        android:padding="10dip"
        android:gravity="right"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:background="#338844" 
        />
       	
     	<TextView
        android:text="@string/percent"
        android:padding="10dip"
        android:gravity="right"
        android:textColor="#FFFFFF"
        android:background="#449955"
        />
       		
       	<TextView
        android:text="@string/yearly"
        android:padding="10dip"
        android:gravity="right"
        android:textColor="#FFFFFF"
        android:background="#338844"
        />
       			
       	<TextView
        android:text="@string/monthly"
        android:padding="10dip"
        android:gravity="right"
        android:textColor="#FFFFFF"
        android:background="#449955"
        />
       	
       	<TextView
        android:text="@string/week"
        android:padding="10dip"
        android:gravity="right"
        android:textColor="#FFFFFF"
        android:background="#338844"
        />
       		
       	<TextView
        android:text="@string/four_weeks"
        android:padding="10dip"
        android:gravity="right"
        android:textColor="#FFFFFF"
        android:background="#449955"
        />	
       	
       	<TextView
        android:text="@string/two_weeks"
        android:padding="10dip"
        android:gravity="right"
        android:textColor="#FFFFFF"
        android:background="#449955"
        />
       	
       	<TextView
        android:text="@string/daily"
        android:padding="10dip"
        android:gravity="right"
        android:textColor="#FFFFFF"
        android:background="#338844"
        />
       		
    </TableRow>   

</TableLayout>
</HorizontalScrollView>
</ScrollView>